--- a/client/src/scss/index.scss
+++ b/client/src/scss/index.scss
@@ -19,7 +19,7 @@ html, body {
 }
 
 .page {
-  @include calc("height", "100% - "$navbar_height);
+  @include calc("height", "100% - " + $navbar_height + " - " $space);
   padding-top: 5%;
 }
 
