--- a/client/src/scss/variables.scss
+++ b/client/src/scss/variables.scss
@@ -1,2 +1,4 @@
 $rose: #bc1272;
+$font-color: black;
 $navbar_height: 5%;
+$space: 5%;
